--- a/Project-II-Calculator/calculator/src/components/ButtonComponents/Button.css
+++ b/Project-II-Calculator/calculator/src/components/ButtonComponents/Button.css
@@ -1,19 +1,19 @@
-.btn-text {
-    width: 100px;
+.btn-number {
+    width: 23%;
     height: 100px;
     font-size: 3rem;
-}
-
-.red {
-    background: rgb(163, 24, 24); 
-}
-
-.white {
     background: white;
 }
 
+.btn-operation {
+    width: 31%;
+    height: 100px;
+    font-size: 3rem;
+    background: rgb(163, 24, 24);
+}
+
 .btn-action {
-    width: 300px;
+    width: 69%;
     height: 100px;
     background: white;
     font-size: 3rem;
