--- a/Project-II-Calculator/calculator/src/components/DisplayComponents/Display.css
+++ b/Project-II-Calculator/calculator/src/components/DisplayComponents/Display.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    width: 400px;
+    width: 100%;
     height: 120px;
     border: 1px solid grey;
     background: rgb(63, 62, 62);
