--- a/Project-II-Calculator/calculator/src/index.css
+++ b/Project-II-Calculator/calculator/src/index.css
@@ -1,11 +1,20 @@
 
 
 body {
+  width: 420px;
   margin: 0 auto;
   padding: 0;
   font-family: sans-serif;
-  width: 400px;
   margin-top: 100px;
+  
 
+ 
+
+}
+
+#root {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
 }
 
